<resources>
    <string name="app_name">ShoppingList</string>
    <string name="inter_ad_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="shop_list">Shopping list</string>
    <string name="new_item" translatable="false">New</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="new_list_name">New list name</string>
    <string name="list_name">list name</string>
    <string name="create_list">Create list</string>
    <string name="delete">Delete</string>
    <string name="delete_this_item">Do you want delete this item?</string>
    <string name="delete_list">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="update_list">Update</string>
    <string name="delete_list_all">Delete list</string>
    <string name="clear_list">Clear list</string>
    <string name="share_list">Share list</string>
    <string name="new_item_in_list">New item</string>
    <string name="save_item">Save Item</string>
    <string name="new_item_hint">new item</string>
    <string name="empty">Empty</string>
    <string name="update_list_item">Update list item</string>
    <string name="name">Name</string>
    <string name="item_info">Item info</string>
    <string name="update">UPDATE</string>
    <string name="general">General</string>
    <string name="choose_note_style">Choose note style</string>
    <string name="choose_time_format">Choose time format</string>
    <string name="remove_ads">Remove ads</string>
    <string name="remove_ads_summary">Remove all adsfrom this app</string>
    <string name="theme_settings">Theme settings</string>
    <string name="choose_theme">Choose theme</string>
    <string name="note_text_settings">Note text settings</string>
    <string name="choose_note_text_size">Choose note text size</string>
    <string name="title_text_size">Title text size</string>
    <string name="content_text_size">Content text size</string>
    <string name="Linear">Linear</string>
    <string name="Grid">Grid</string>
    <string name="Blue_theme">Blue theme</string>
    <string name="Green_theme">Green theme</string>
    <string name="shopping_list_label">Shopping List</string>
    <string name="new_notes_label">Notes</string>
    <string name="settings_label">Settings</string>
</resources>