<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/delete_list_all"
        android:id="@+id/delete_list"
        />
    <item
        android:title="@string/clear_list"
        android:id="@+id/clear_list"
        />
    <item
        android:title="@string/share_list"
        android:id="@+id/share_list"
        />
    <item
        android:title="@string/new_item_in_list"
        android:id="@+id/new_item"
        android:icon="@drawable/ic_new_shop_item"
        app:actionLayout="@layout/edit_action_layout"
        android:orderInCategory="1"
        app:showAsAction="always|collapseActionView"
        />
    <item
        android:title="@string/save_item"
        android:id="@+id/save_item"
        android:icon="@drawable/ic_save_shop_item"
        android:orderInCategory="2"
        app:showAsAction="always"
        />
</menu>